--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,1 +1,4 @@
-@import '../abstract/variables.scss';  
+@import '../abstract/reset';
+@import '../abstract/variables.scss';
+
+@import '../components/header.scss';
