--- a/abstract/_reset.scss
+++ b/abstract/_reset.scss
@@ -1,15 +1,19 @@
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-    font-size: 100%;
-    font: inherit;
-    scroll-behavior: smooth;
-    vertical-align: baseline;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Montserrat', sans-serif;
-    color: #000;
-    font-weight: 500;
-  }
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  font-size: 100%;
+  font: inherit;
+  scroll-behavior: smooth;
+  vertical-align: baseline;
+  list-style: none;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  color: #2b2b2b;
+  font-weight: 500;
+}
+
+html, body {
+  background-color: rgb(243, 243, 243);
+}
