--- a/abstract/_variables.scss
+++ b/abstract/_variables.scss
@@ -1,5 +1,7 @@
-@mixin widthSize {
-    max-width: 1100px;
+@mixin widthSize($maxWidth) {
+    max-width: $maxWidth;
     width: 100%;
     margin: 0 auto;
 }
+
+$color-dark: #2b2b2b;
