feat: projects with img and link done

--- a/abstract/_variables.scss
+++ b/abstract/_variables.scss
@@ -1,5 +1,5 @@
-@mixin widthSize($maxWidth) {
-    max-width: $maxWidth;
+@mixin widthSize {
+    max-width: 1300px;
     width: 100%;
     margin: 0 auto;
 }
