--- a/components/_header.scss
+++ b/components/_header.scss
@@ -3,7 +3,7 @@
 header {
     border-bottom: 1px solid rgb(219, 219, 219);
     .headersize {
-        @include widthSize(1100px);
+        @include widthSize;
         display: flex;
         justify-content: space-between;
         align-items: center;
