--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,6 +4,5 @@
 @import '../components/header.scss';
 @import '../components/main';
 
-
 @import '../sections/contact';
-
+@import '../sections/projetos';
