--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ header {
   border-bottom: 1px solid rgb(219, 219, 219);
 }
 header .headersize {
-  max-width: 1100px;
+  max-width: 1300px;
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -124,7 +124,7 @@ main .mainsize .imgmain .textcircle {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 1100px;
+  max-width: 1300px;
   width: 100%;
   margin: 0 auto;
 }
@@ -194,4 +194,55 @@ main .mainsize .imgmain .textcircle {
     flex-direction: column;
     gap: 0px;
   }
+}
+
+#projetos {
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+}
+#projetos h1 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+#projetos .containerprojects {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+}
+#projetos .containerprojects .projeto {
+  width: 44%;
+  margin-bottom: 5rem;
+}
+#projetos .containerprojects .projeto .photoprojeto {
+  position: relative;
+  overflow: hidden;
+}
+#projetos .containerprojects .projeto .photoprojeto .imgprincipalprojeto,
+#projetos .containerprojects .projeto .photoprojeto .imgprincipalprojetohover {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: transform 0.7s ease-in-out, opacity 0.2s ease;
+}
+#projetos .containerprojects .projeto .photoprojeto .imgprincipalprojetohover {
+  position: absolute;
+  top: 0;
+  left: 100%;
+}
+#projetos .containerprojects .projeto .photoprojeto:hover .imgprincipalprojetohover {
+  transform: translateX(-100%);
+}
+#projetos .containerprojects .projeto .textprojeto {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+#projetos .containerprojects .projeto .textprojeto h3 {
+  font-size: 1.5rem;
+}
+#projetos .containerprojects .projeto .textprojeto a {
+  font-size: 1.5rem;
 }/*# sourceMappingURL=styles.css.map */
