feat: menu hamburger opening and closing

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,6 +3,8 @@
 
 @import '../components/header.scss';
 @import '../components/main';
+@import '../components/menuhamburger';
+@import '../components/contentmenuhamburger';
 
 @import '../sections/contact';
 @import '../sections/projetos';
