--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@
 }
 
 html, body {
-  background-color: rgb(243, 243, 243);
+  background-color: #f3f3f3;
 }
 
 .back-to-top {
@@ -91,7 +91,7 @@ header .headersize .menuhamburger span {
 }
 
 html, body {
-  background-color: rgb(243, 243, 243);
+  background-color: #f3f3f3;
 }
 
 .back-to-top {
@@ -159,6 +159,59 @@ main .mainsize .imgmain .textcircle {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@media (max-width: 700px) {
+  header .headersize nav {
+    display: none;
+  }
+  header .headersize .menuhamburger {
+    display: block;
+    transition: 0.3s;
+  }
+  header .headersize .menuhamburger.ativo {
+    z-index: 888;
+    position: absolute;
+    right: 10px;
+    top: 15px;
+  }
+  header .headersize .menuhamburger.ativo .bar:nth-child(2) {
+    opacity: 0;
+    background-color: #2b2b2b;
+    transition: 0.3s ease-in-out;
+  }
+  header .headersize .menuhamburger.ativo .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+    background-color: #2b2b2b;
+    transition: 0.3s ease-in-out;
+  }
+  header .headersize .menuhamburger.ativo .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+    background-color: #2b2b2b;
+    transition: 0.3s ease-in-out;
+  }
+}
+@media (max-width: 700px) {
+  .mobileMenuContent {
+    display: none;
+  }
+  .mobileMenuContent.ativo {
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: #f3f3f3;
+    position: fixed;
+    top: 0;
+    z-index: 777;
+    animation: animationMenu 0.5s ease-in-out;
+  }
+}
+@keyframes animationMenu {
+  from {
+    transform: translate3d(0, -100%, 0);
+  }
+  to {
+    transform: translate3d(0, 0, 0);
   }
 }
 #contato {
