--- a/components/_menuhamburger.scss
+++ b/components/_menuhamburger.scss
@@ -1,20 +1,20 @@
 @import '../abstract/variables';
-
-@media (max-width: 700px) {
     header {
         .headersize {
-            nav {
-                display: none;
-            }
             .menuhamburger {
-                display: block;
                 transition: .3s;
             }
             .menuhamburger.ativo {
                 z-index: 888;
-                position: absolute;
-                right: 10px; 
-                top: 15px;
+                span:nth-child(1) {
+                  width: 40px;
+              }
+              span:nth-child(2) {
+                  width: 40px;
+              }
+              &:hover span {
+                  width: 40px;
+              }
               }
               .menuhamburger.ativo .bar:nth-child(2) {
                 opacity: 0;
@@ -33,4 +33,3 @@
             }
         }
     }
-}
