--- a/sections/_projetos.scss
+++ b/sections/_projetos.scss
@@ -1,12 +1,16 @@
 @import '../abstract/variables';
 
 #projetos {
-    @include widthSize;
     h1 {
         font-size: 3rem;
         margin-bottom: 2rem;
     }
-
+    .linebreak {
+        height: 2px;
+        width: 1px solid rgb(58, 58, 58);
+        width: 100%;
+        display: block;
+    }
     .containerprojects {
         display: flex;
         justify-content: space-between;
@@ -14,7 +18,7 @@
         width: 100%;
 
         .projeto {
-            width: 44%;
+            width: 47%;
             margin-bottom: 5rem;
             .photoprojeto {
                 position: relative;
