--- a/sections/_projetos.scss
+++ b/sections/_projetos.scss
@@ -1,6 +1,7 @@
 @import '../abstract/variables';
 
 #projetos {
+    padding: 0 2rem;
     h1 {
         font-size: 3rem;
         margin-bottom: 2rem;
