--- a/components/_header.scss
+++ b/components/_header.scss
@@ -6,56 +6,64 @@ header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        #title {
-            cursor: pointer;
+        .titleprofile {
+            display: flex;
+            align-items: center;
+            gap: 10px;
             h1 {
-                font-family: 'Montserrat', sans-serif;
-                font-size: 1rem;
-                color: #070707;
+                font-weight: 800;
+                font-size: 3rem;
             }
-            .profile {
-                h3 {
-                    font-family: 'Montserrat', sans-serif;
-                    font-size: .9rem;
-                    color: #e2e2e2;
-                    overflow: hidden;
-                    position: relative;
-                    display: inline-block;
-                    &::before, &::after {
-                        content: '';
-                        position: absolute;
-                        width: 100%;
-                        left: 0;
-                    }
-                    &::after {
-                        content: attr(data-replace);
-                        height: 100%;
-                        top: 0;
-                        transform-origin: 50% 100%;
-                        transform: translate3d(0, 100%, 0);
-                        transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
-                        color: #a1a1a1;
-                    }
-                    &:hover::before {
-                        transform-origin: 50% 50%;
-                        transform: scaleY(0);
-                    }
-                    &:hover::after {
-                        transform: translate3d(0, 0, 0);
-                    }
-                    span {
+            #title {
+                margin-top: 5px;
+                cursor: pointer;
+                h1 {
+                    font-size: 1rem;
+                    color: $color-font-white;
+                    font-weight: 700;
+                }
+                .profile {
+                    h3 {
+                        font-size: .9rem;
+                        color: #7a7a7a;
+                        overflow: hidden;
+                        position: relative;
                         display: inline-block;
-                        transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
-                    }
-                    &:hover span {
-                        transform: translate3d(0, 100%, 0);
+                        span {
+                            display: inline-block;
+                            transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+                            color: #7a7a7a;
+                        }
+                        &::before, &::after {
+                            content: '';
+                            position: absolute;
+                            width: 100%;
+                            left: 0;
+                        }
+                        &::after {
+                            content: attr(data-replace);
+                            height: 100%;
+                            top: 0;
+                            transform-origin: 50% 100%;
+                            transform: translate3d(0, 100%, 0);
+                            transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+                            color: #a1a1a1;
+                        }
+                        &:hover::before {
+                            transform-origin: 50% 50%;
+                            transform: scaleY(0);
+                        }
+                        &:hover::after {
+                            transform: translate3d(0, 0, 0);
+                        }
+                        &:hover span {
+                            transform: translate3d(0, 100%, 0);
+                        }
                     }
                 }
             }
         }
         nav {
-            background-color: #dfdfdf;
-            border-radius: 100vw;
             padding: 1.2rem 1.7rem;
             ul {
                 display: flex;
@@ -65,23 +73,13 @@ header {
         .menuhamburger {
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
+            gap: 15px;
             cursor: pointer;
             span {
-                width: 40px;
-                height: 4px;
-                background-color: rgb(0, 0, 0);
+                width: 50px;
+                height: 2px;
+                background-color: rgb(212, 212, 212);
                 transition: all 0.3s ease;
-                margin: 3px 0px;
-            }
-            span:nth-child(1) {
-                width: 26px;
-            }
-            span:nth-child(2) {
-                width: 35px;
-            }
-            &:hover span {
-                width: 40px;
             }
         }
     }
